# TilEm-Qml-SailfishOS

./: .gitignore  LICENSE  README.md  build-and-deploy.sh  harbour-tilem.pro
backend/: CMakeLists.txt
backend/modules/: CMakeLists.txt
backend/modules/TilEm/: CMakeLists.txt  backend.cpp.in  backend.h.in  calc.cpp  calc.h  calclink.cpp  calclink.h  calcscreen.cpp  calcscreen.h  calcthread.cpp  calcthread.h  qmldir  qmllogger.h  settings.cpp  settings.h  skin.cpp  skin.h  skinimage.cpp  skinimage.h  skinops.c  skinops.h
data/: CMakeLists.txt
data/skins/: ti83pse.skn  ti84pse.skn
rpm/: harbour-tilem.spec  harbour-tilem.yaml
src/: harbour-tilem.desktop  src.pro
src/qml/: Main.qml  harbour-tilem.qml
src/qml/cover/: CoverPage.qml
src/qml/pages/: AboutPage.qml  CalcPage.qml  FolderPage.qml
src/src/: main.cpp
tilem-core/: config.h  tilem-core.pro
tilem-core/emu/: emu.pro  lcd.c  z80.c.backup_1760377371  z80.c.bak  z80.c.debug_backup  z80.c.debug_verbose  z80.h
tilem-core/emu/x1/: x1_init.c  x1_io.c
tilem-core/emu/xz/: xz_io.c
